--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -24,6 +24,12 @@
 
   </android.support.design.widget.AppBarLayout>
 
-  <include layout="@layout/content_main"/>
+  <FrameLayout
+      android:id="@+id/main_container"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      >
+
+  </FrameLayout>
 
 </android.support.design.widget.CoordinatorLayout>
