--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -21,15 +21,14 @@
         android:background="?attr/colorPrimary"
         app:popupTheme="@style/AppTheme.PopupOverlay"
         />
-
   </android.support.design.widget.AppBarLayout>
 
   <FrameLayout
       android:id="@+id/main_container"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:layout_marginTop="?android:attr/actionBarSize"
       >
-
   </FrameLayout>
 
 </android.support.design.widget.CoordinatorLayout>
