--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,8 @@
   <dimen name="nav_header_vertical_spacing">8dp</dimen>
   <dimen name="nav_header_height">176dp</dimen>
   <dimen name="fab_margin">16dp</dimen>
+  <dimen name="padding_layout_med">16dp</dimen>
+  <dimen name="margin_small">8dp</dimen>
+  <dimen name="header_city_name_size">32sp</dimen>
+  <dimen name="text_tem_size">70sp</dimen>
 </resources>
