--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,11 @@
     <item name="windowNoTitle">true</item>
   </style>
 
+  <style name="MyButton" parent="Theme.AppCompat.Light">
+    <item name="colorControlHighlight">@color/colorControlHighlight</item>
+    <item name="colorButtonNormal">@color/colorAccent</item>
+  </style>
+
   <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
   <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
