--- a/app/src/main/res/layout/fragment_find_city.xml
+++ b/app/src/main/res/layout/fragment_find_city.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:gravity="center"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/padding_keyword"
+    >
 
   <android.support.design.widget.TextInputEditText
       android:id="@+id/input_city_name"
@@ -13,9 +15,9 @@
 
   <Button
       android:id="@+id/bt_send"
-      android:text="@string/send"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:text="@string/send"
       android:theme="@style/MyButton"
       />
 
