--- a/app/src/main/res/layout/fragment_weather_info.xml
+++ b/app/src/main/res/layout/fragment_weather_info.xml
@@ -1,102 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    android:gravity="center"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical"
     android:padding="@dimen/padding_layout_med"
     >
 
   <LinearLayout
-      android:gravity="center"
-      android:orientation="horizontal"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
+      android:gravity="center"
+      android:orientation="horizontal"
       >
 
     <ImageView
-        android:layout_marginRight="@dimen/margin_small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginRight="@dimen/margin_small"
         android:src="@drawable/d10"
         />
 
     <LinearLayout
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
         >
 
       <TextView
-          android:textSize="@dimen/header_city_name_size"
-          android:textStyle="bold"
-          android:textColor="#3a3939"
           android:id="@+id/header_city_name"
-          tools:text="Moscow"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
+          android:textColor="#3a3939"
+          android:textSize="@dimen/header_city_name_size"
+          android:textStyle="bold"
+          tools:text="Moscow"
           />
 
       <TextView
-          android:textColor="#625d5d"
           android:id="@+id/header_date"
-          tools:text="Friday, 25 June"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
+          android:textColor="#625d5d"
+          tools:text="Friday, 25 June"
           />
     </LinearLayout>
   </LinearLayout>
 
   <LinearLayout
-      android:layout_gravity="center_horizontal"
-      android:orientation="horizontal"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_gravity="center_horizontal"
+      android:orientation="horizontal"
       >
     <TextView
-        android:textStyle="bold"
-        android:textColor="@color/colorPrimary"
-        android:textSize="@dimen/text_tem_size"
-        tools:text="31"
+        android:id="@+id/tem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/colorPrimary"
+        android:textSize="@dimen/text_tem_size"
+        android:textStyle="bold"
+        tools:text="31"
         />
 
     <TextView
-        android:text="@string/symbol_grade"
-        android:textStyle="bold"
-        android:textColor="@color/colorPrimary"
-        android:layout_gravity="center_horizontal"
-        android:textSize="70sp"
+        android:id="@+id/symbol_grade"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/symbol_grade"
+        android:textColor="@color/colorPrimary"
+        android:textSize="70sp"
+        android:textStyle="bold"
         />
   </LinearLayout>
 
   <LinearLayout
-      android:orientation="vertical"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:orientation="vertical"
       >
     <TextView
+        android:id="@+id/press"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         tools:text="@string/pressure"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         />
 
     <TextView
+        android:id="@+id/hum"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         tools:text="@string/humidity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         />
 
     <TextView
-        tools:text="@string/wind"
+        android:id="@+id/wind"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        tools:text="@string/wind"
         />
   </LinearLayout>
 
