--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
   <dimen name="margin_small">8dp</dimen>
   <dimen name="header_city_name_size">32sp</dimen>
   <dimen name="text_tem_size">70sp</dimen>
+  <dimen name="padding_keyword">70dp</dimen>
 </resources>
